finished products section and responsive

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -18,5 +18,8 @@
     .banner-image-container {
         width: 100%;
     }
-    
+    .grid-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
 }
