--- a/styles/style.css
+++ b/styles/style.css
@@ -57,7 +57,6 @@ body {
 
 /* banner section styles */
 .banner-section {
-    /* border: 2px solid rebeccapurple; */
     max-width: 1250px;
     margin: 0 auto;
     min-height: 400px;
@@ -68,7 +67,6 @@ body {
     border-radius: 10px;
 }
 .text-container {
-    /* border: 2px solid red; */
     width: 50%;
     min-height: 300px;
     display: flex;
@@ -78,7 +76,6 @@ body {
     gap: 15px;
 }
 .banner-image-container {
-    /* border: 2px solid yellow; */
     width: 50%;
     min-height: 300px;
     position: relative;
@@ -89,9 +86,6 @@ body {
     object-fit: cover;
     border-radius: 10px;
 }
-/* .text-container h1, p, span {
-    font-size: 45px;
-} */
 .banner-heading {
     background: linear-gradient(45deg, #e893cf, #9376e0);
     background-clip: text;
@@ -110,7 +104,6 @@ body {
     gap: 15px;
 }
 .common-button {
-    /* border: 2px solid #e893cf; */
     padding: 10px 20px;
     border-radius: 5px;
 }
@@ -159,4 +152,28 @@ body {
     background-color: #e893cf;
     padding: 10px;
     border-radius: 50px;
+}
+
+
+/* gallery styles */
+.gallery-section {
+    max-width: 1250px;
+    margin: 0 auto;
+}
+.gallery-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* align-content: center; */
+    gap: 10px;
+}
+.single-gallery img {
+    width: 70%;
+    display: block;
+    margin: 0 auto;
+}
+.single-gallery {
+    width: 300px;
+    border: 2px solid tomato;
+    border-radius: 10px;
 }
